# minecraft_status

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  main.yml  release.yml  rust.yml
dns/: Cargo.toml
dns/src/: domain_lookup.rs  lib.rs  servers.rs
dns/src/servers/: mod.rs  unix.rs  windows.rs
dns/src/servers/windows/: adapter_info.rs  mod.rs
minecraft_status/: Cargo.toml
minecraft_status/src/: config.rs  main.rs
minecraft_status/templates/: all.html  server_down.html  single.html
src/: config.rs  main.rs
templates/: server_up.html
