[package]
name = "minecraft_status"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
gamedig = { version = "0.3.0", features = [ "serde" ] }
anyhow = "1.0.75"
parse_duration = "2.1.1"
log = "0.4.20"
simple_logger = "4.2.0"
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
minijinja = "1.0.8"
dns = { path = "../dns" }